<resources>
    <string name="access_number">接入号码</string>
    <string name="account_recharge">账户充值</string>
    <string name="acquire_expense_collection">消费收款</string>
    <string name="add">+</string>
    <string name="add_operator_fail">增加操作员失败</string>
    <string name="add_operator_scs">增加操作员成功</string>
    <string name="alert_msg">初始密码：123456，请尽快完成密码修改！</string>
    <string name="amount_recharge">现金充值</string>
    <string name="amount_recharge_cancel">现金充值撤销</string>
    <string name="anew_print_statement">重打印结算单</string>
    <string name="app_name">星POS收银台</string>
    <string name="appoint_phone_no">手机号码</string>
    <string name="appointment_no">预约号码</string>
    <string name="auth_sale_mode">授权通知模式</string>
    <string name="authsale_use_swipe">预授权完成是否用卡</string>
    <string name="back">返回</string>
    <string name="back_scanner">后置摄像头</string>
    <string name="balance">可用余额:</string>
    <string name="balance_bonus">积分</string>
    <string name="balance_card_tips">请挥卡、刷卡、插卡或手输</string>
    <string name="balance_money">账户余额</string>
    <string name="balance_point">点</string>
    <string name="balance_transaction_type">交易类型</string>
    <string name="balance_yuan">元</string>
    <string name="bank_card">银行卡号</string>
    <string name="bank_trans">银行卡交易</string>
    <string name="batch_no">批次号</string>
    <string name="bill_act">交易计数器</string>
    <string name="bill_balance_after_load">圈存后余额</string>
    <string name="bill_balance_before_load">圈存前余额</string>
    <string name="bill_cut_receipt">请撕下小票</string>
    <string name="bill_date">时间日期</string>
    <string name="bill_dicount">其他优惠：</string>
    <string name="bill_dicount_amt">已享优惠：</string>
    <string name="bill_ec_percher">电子现金余额</string>
    <string name="bill_is_print_bank">请取下小票</string>
    <string name="bill_is_print_customer">撤销成功</string>
    <string name="bill_merchant">收款商户：</string>
    <string name="bill_merchant_name">商户名称</string>
    <string name="bill_merchant_no">商户号</string>
    <string name="bill_money">金额</string>
    <string name="bill_order_amt">订单金额：</string>
    <string name="bill_other_money">其他金额</string>
    <string name="bill_p1">P1</string>
    <string name="bill_p2">P2</string>
    <string name="bill_pos_id">终端号</string>
    <string name="bill_printing_defuat_tip">正在打印中…</string>
    <string name="bill_printing_receipt">打印小票中…</string>
    <string name="bill_ref_no">参考号</string>
    <string name="bill_repeal_success">撤销成功</string>
    <string name="bill_vip_discount">会员折扣：</string>
    <string name="bill_voucher">代 金 券：</string>
    <string name="btn_back_main">返回主菜单</string>
    <string name="cancel_trans_title">待撤销交易（原交易）</string>
    <string name="card_check_support_rf_card">请检查是否支持射频卡</string>
    <string name="card_expdate">卡有效期</string>
    <string name="card_read_cancel">取消读卡！</string>
    <string name="card_read_cardno_not_allow">卡号不合法，不允许交易</string>
    <string name="card_read_error">读卡出错</string>
    <string name="card_read_error_pos_ic_not_allow">本卡为IC卡，但终端不支持IC卡交易</string>
    <string name="card_read_fail_fallback">读取IC卡错误，请刷磁条卡</string>
    <string name="card_read_fail_retry">读卡失败，请重试！</string>
    <string name="card_read_pls_instert_ic">本卡为IC卡，请插入IC卡</string>
    <string name="card_read_timeout">读卡超时！</string>
    <string name="card_read_track2_not_allow">二磁数据不合法，不允许交易</string>
    <string name="card_swipe_in_card">请使用转入卡</string>
    <string name="card_swipe_out_card">请使用转出卡</string>
    <string name="card_swper_error_retry">刷卡错误，请重刷！</string>
    <string name="card_unsupport_ic_card">暂不支持IC卡交易</string>
    <string name="cardholder_information">持卡人信息验证</string>
    <string name="cg_main_password_fail">修改主管密码失败</string>
    <string name="cg_main_password_scs">修改主管密码成功</string>
    <string name="cg_operator_password_fail">修改操作员密码失败</string>
    <string name="cg_operator_password_scs">修改操作员密码成功</string>
    <string name="cg_safe_password_fail">修改安全密码失败</string>
    <string name="cg_safe_password_scs">修改安全密码成功</string>
    <string name="cg_sys_password_fail">修改系统管理员密码失败</string>
    <string name="cg_sys_password_scs">修改系统管理员密码成功</string>
    <string name="change">修改</string>
    <string name="charge_password">主管密码</string>
    <string name="check_detail">明细查询</string>
    <string name="check_ecload_log">圈存日志</string>
    <string name="choose_date_choose_date">请选择日期</string>
    <string name="choose_date_choose_indate">请选择卡有效日期</string>
    <string name="choose_date_choose_transaction">请选择原交易日期</string>
    <string name="choose_date_day">日</string>
    <string name="choose_date_hour">时</string>
    <string name="choose_date_minute">分</string>
    <string name="choose_date_mouth">月</string>
    <string name="choose_date_next_string">（如不选择直接按下一步跳过）</string>
    <string name="choose_date_second">秒</string>
    <string name="choose_date_year">年</string>
    <string name="cipher_cancel">取消密码输入！</string>
    <string name="cipher_exception">输密异常, 设备返回：</string>
    <string name="cipher_timeout">密码输入超时！</string>
    <string name="clear_all_key">清除所有密钥</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_request_processing">清要求处理标志</string>
    <string name="clear_script_execution_result_of_the_water">清脚本执行结果流水</string>
    <string name="clear_settlement_marks">清结算标志</string>
    <string name="comm_appoint_sale_waitting">正在预约消费中…</string>
    <string name="comm_balance_query_waitting">正在余额查询中…</string>
    <string name="comm_bind_pos_waitting">正在绑定终端…</string>
    <string name="comm_cardhodler_info_verify">正在持卡人信息验证中…</string>
    <string name="comm_cardhodler_info_verify_success">持卡人信息验证成功</string>
    <string name="comm_check_operator_waitting">正在验证操作员密码…</string>
    <string name="comm_connect_fail">网络连接异常，请检查网络</string>
    <string name="comm_connect_timeout">网络连接超时，请稍候再试</string>
    <string name="comm_consume_revocation_waitting">正在消费撤销中…</string>
    <string name="comm_consume_waitting">正在消费中…</string>
    <string name="comm_fail">网络连接异常，交易失败</string>
    <string name="comm_online_return_waitting">正在退货中…</string>
    <string name="comm_order_consume_revocation_waitting">正在订购消费撤销中…</string>
    <string name="comm_order_consume_waitting">正在订购消费中…</string>
    <string name="comm_order_online_return_waitting">正在订购退货中…</string>
    <string name="comm_order_pre_auth_finish_notice_waitting">正在订购预授权完成通知中…</string>
    <string name="comm_order_pre_auth_finish_revocation_waitting">正在订购预授权完成撤销中…</string>
    <string name="comm_order_pre_auth_finish_waitting">正在订购预授权完成请求中…</string>
    <string name="comm_order_pre_auth_revocation_waitting">正在订购预授权撤销中…</string>
    <string name="comm_order_pre_auth_waitting">正在订购预授权中…</string>
    <string name="comm_pre_auth_finish_notice_waitting">正在预授权完成通知中…</string>
    <string name="comm_pre_auth_finish_revocation_waitting">正在预授权完成撤销中…</string>
    <string name="comm_pre_auth_finish_waitting">正在预授权完成请求中…</string>
    <string name="comm_pre_auth_revocation_waitting">正在预授权撤销中…</string>
    <string name="comm_pre_auth_waitting">正在预授权中…</string>
    <string name="comm_receive_data">"交易处理中…
接收返回…"</string>
    <string name="comm_reverse_waitting">正在冲正中…</string>
    <string name="comm_script_waitting">正在上送脚本通知…</string>
    <string name="comm_sendoffline_waitting">正在离线上送…</string>
    <string name="comm_sign_waitting">正在签到中…</string>
    <string name="comm_signature_watting">正在上送签名</string>
    <string name="comm_waitting_network">正在连接网络…</string>
    <string name="common__reset_manager_password">重置系统管理员密码</string>
    <string name="common_auth_code">授权码</string>
    <string name="common_back_page">上一页</string>
    <string name="common_back_page_last">已经到第一条</string>
    <string name="common_balance">余额</string>
    <string name="common_bank_pay_trans">银行卡收款交易</string>
    <string name="common_barcode_no">条码</string>
    <string name="common_big">大</string>
    <string name="common_cancel">取消</string>
    <string name="common_cancel_trans_tip_msg">是否取消交易</string>
    <string name="common_card_cvn2">卡CVN2</string>
    <string name="common_card_name">持卡人姓名</string>
    <string name="common_card_no">卡号</string>
    <string name="common_cardno_comfirm">请确认卡号</string>
    <string name="common_charge_amount">充值金额:</string>
    <string name="common_check_balance">余额查询</string>
    <string name="common_check_operator">操作员验证</string>
    <string name="common_chinese">中文</string>
    <string name="common_clear_emv">清除emv参数</string>
    <string name="common_clear_lock_flag">清除锁定标志</string>
    <string name="common_clear_reverse_flag">清除冲正标志</string>
    <string name="common_clear_shell_flag">清除脚本标志</string>
    <string name="common_clear_succ">清除成功</string>
    <string name="common_colon">:</string>
    <string name="common_consumption">消费</string>
    <string name="common_contack_elec_cash">接触式电子现金消费</string>
    <string name="common_country_code">终端国家代码</string>
    <string name="common_credential_no">证件号</string>
    <string name="common_credential_type">证件类型</string>
    <string name="common_currency_code">交易货币代码</string>
    <string name="common_date">日期</string>
    <string name="common_date_dialog_title">日期选择</string>
    <string name="common_dot">.</string>
    <string name="common_elec_cash">电子现金</string>
    <string name="common_exit_app">是否退出应用？</string>
    <string name="common_fail">失败</string>
    <string name="common_indate">有效期</string>
    <string name="common_input_amount_not_enough">输入金额不足</string>
    <string name="common_input_barcode_no">请输入条码</string>
    <string name="common_input_card_no">请输入卡号</string>
    <string name="common_input_main_key_fail">导入主密钥失败</string>
    <string name="common_input_main_key_success">导入主密钥成功</string>
    <string name="common_input_new_password">请输入新密码</string>
    <string name="common_input_not_allow_empty">输入不能为空</string>
    <string name="common_input_not_enough">输入位数不足</string>
    <string name="common_input_password">请输入密码</string>
    <string name="common_input_too_long">输入长度太长</string>
    <string name="common_installment">分期</string>
    <string name="common_last_bank_trans">上一笔银行卡交易</string>
    <string name="common_last_scan_trans">上一笔二维码交易</string>
    <string name="common_leading_in">导入</string>
    <string name="common_local_trans">本机存储交易查询</string>
    <string name="common_lock_terminal">锁定终端</string>
    <string name="common_logo">LOGO</string>
    <string name="common_main">星POS收银台</string>
    <string name="common_main_operator_chang_pwd">修改主管密码</string>
    <string name="common_manage">管理</string>
    <string name="common_middle">中</string>
    <string name="common_mobile_chip">手机芯片</string>
    <string name="common_mobile_phone">手机号码</string>
    <string name="common_more_version_flag">更多版本信息</string>
    <string name="common_mscard_transfer">磁条卡充值</string>
    <string name="common_name">名称：</string>
    <string name="common_next">下一步</string>
    <string name="common_next_page">下一页</string>
    <string name="common_next_page_last">已经到最后一条</string>
    <string name="common_no">否</string>
    <string name="common_no_water">暂无交易</string>
    <string name="common_offline">离线</string>
    <string name="common_offline_settlement">离线结算</string>
    <string name="common_old_amount">原金额：</string>
    <string name="common_old_batch_no">原批次号</string>
    <string name="common_old_ref_no">原参考号</string>
    <string name="common_old_ter_no">原终端号</string>
    <string name="common_old_trace_no">原凭证号</string>
    <string name="common_online_trans">历史交易查询</string>
    <string name="common_operator_add">增加操作员</string>
    <string name="common_operator_chang_pwd">修改操作员密码</string>
    <string name="print_shop_info">商户信息</string>
    <string name="setting_login">登录设置</string>
    <string name="setting_params_download">参数下载</string>
    <string name="setting_password">密码管理</string>
    <string name="setting_print">打印设置</string>
    <string name="setting_trans">交易设置</string>
    <string name="setting_version_message">关于星POS</string>
</resources>