<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="@color/white" android:paddingLeft="@dimen/dp_13" android:paddingRight="@dimen/dp_13" android:layout_width="fill_parent" android:layout_height="@dimen/dp90" android:splitMotionEvents="false">
        <TextView android:textSize="@dimen/sp15" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_set_print" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dp12" android:text="@string/setting_print" android:drawableTop="@drawable/icon_sign" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/sp15" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_set_trans" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dp12" android:text="@string/setting_trans" android:drawableTop="@drawable/icon_xf" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/sp15" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_pwd_manager" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dp12" android:text="@string/setting_password" android:drawableTop="@drawable/icon_xfcx" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/sp15" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_merchant_info" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dp12" android:text="@string/print_shop_info" android:drawableTop="@drawable/icon_yecx" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@color/white" android:paddingLeft="@dimen/dp_13" android:paddingRight="@dimen/dp_13" android:layout_width="fill_parent" android:layout_height="@dimen/dp90" android:splitMotionEvents="false">
        <TextView android:textSize="@dimen/sp15" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_set_login" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dp12" android:text="@string/setting_login" android:drawableTop="@drawable/icon_operator" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/sp15" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_set_params_download" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dp12" android:text="@string/setting_params_download" android:drawableTop="@drawable/icon_params_download" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/sp15" android:textColor="@color/black" android:gravity="center" android:id="@id/tv_set_version_message" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dp12" android:text="@string/setting_version_message" android:drawableTop="@drawable/ic_banben" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/sp15" android:textColor="@color/black" android:gravity="center" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dp12" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>